fix a scrolling error on mobile

--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -22,7 +22,7 @@ article[role=main] {
 }
 
 section.main {
-  padding: 2em 0;
+  margin: 2em 0;
 }
 
 .reverse-row-order {
